Event / OccurrenceEvent rework